--- a/styles/styles.css
+++ b/styles/styles.css
@@ -652,7 +652,7 @@ button {
     flex-direction: column;
     align-items: center;
   }
-  .brand a img{
+  .brand a img {
     width: 100%;
   }
   footer {
@@ -680,5 +680,14 @@ button {
   }
   .newsletter {
     width: 100%;
+  }
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 25px auto;
+  }
+  button {
+    padding: 10px 15px;
   }
 }
