--- a/styles/styles.css
+++ b/styles/styles.css
@@ -687,7 +687,10 @@ button {
     justify-content: center;
     margin: 25px auto;
   }
+  input {
+    padding: 10px 5px;
+  }
   button {
-    padding: 10px 15px;
+    padding: 10px 10px;
   }
 }
