--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,8 +172,9 @@ main > p {
 .top .left hr {
   margin: 25px 0;
 }
-.clocks {
+#season__slider {
   max-width: 100%;
+  max-height: 300px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -311,6 +312,8 @@ main > p {
   cursor: pointer;
 }
 .new {
+  height: 100vh;
+  max-width: 100%;
   background-color: #000000;
   color: #ffffff;
 }
@@ -335,6 +338,14 @@ main > p {
 .new .container hr {
   margin-top: 40px;
   margin-bottom: 80px;
+}
+#new__slider {
+  max-width: 80%;
+  max-height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 .brands {
   background: #0f0f0f;
@@ -369,7 +380,7 @@ main > p {
   margin-bottom: 40px;
 }
 footer {
-  height: 50vh;
+  height: 35vh;
   background-image: url(../images/Rectangle\ 11.jpg);
   background-repeat: no-repeat;
   background-size: cover;
