--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,7 +131,8 @@ main {
   text-transform: uppercase;
 }
 main > p {
-  width: 720px;
+  max-width: 720px;
+  margin: 0 20px;
   text-align: center;
   font-family: "PT Sans";
   font-style: normal;
@@ -281,7 +282,7 @@ main > p {
   color: #ffffff;
 }
 .bottom .right p {
-  width: 470px;
+  max-width: 470px;
   text-align: center;
   font-family: "PT Sans";
   font-style: normal;
@@ -311,7 +312,7 @@ main > p {
   cursor: pointer;
 }
 .new {
-  height: 100vh;
+  min-height: 100vh;
   max-width: 100%;
   background-color: #000000;
   color: #ffffff;
@@ -339,7 +340,7 @@ main > p {
   margin-bottom: 80px;
 }
 #new__slider {
-  max-width: 80%;
+  max-width: 90%;
   max-height: 100%;
   display: flex;
   justify-content: space-between;
@@ -371,14 +372,20 @@ main > p {
 }
 .container .brands__cards {
   display: flex;
-  justify-content: space-between;
-}
-.brand {
-  padding: 0 10px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 30px;
   margin-bottom: 40px;
 }
+.brand {
+  width: 240px;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 footer {
-  height: 35vh;
+  min-height: 50vh;
   background-image: url(../images/Rectangle\ 11.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -471,13 +478,34 @@ button {
   cursor: pointer;
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1300px) {
+  #season__slider {
+    width: 530px;
+    overflow-x: scroll;
+    gap: 20px;
+  }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
+  #season__slider {
+    width: 305px;
+    gap: 10px;
+  }
+  header nav {
+    width: 60%;
+  }
 }
-@media (max-width: 992px) {
+@media (max-width: 912px) {
+  header nav {
+    width: 70%;
+  }
+  .bottom .right p {
+    max-width: 400px;
+  }
 }
 @media (max-width: 768px) {
+  #season__slider {
+    margin-bottom: 40px;
+  }
   .contact .container {
     width: 90%;
     justify-content: space-between;
@@ -501,10 +529,6 @@ button {
   }
   .top .left hr {
     margin: 35px 0;
-  }
-  #season__slider {
-    justify-content: center;
-    gap: 20px;
   }
   .top .right {
     height: 60vh;
@@ -581,6 +605,9 @@ button {
   form {
     width: 325px;
   }
+  .new {
+    min-height: 50vh;
+  }
 }
 @media (max-width: 576px) {
   .contact .left__content div,
@@ -610,11 +637,15 @@ button {
   .top .left {
     width: 100%;
   }
+  .top .left::-webkit-scrollbar {
+    width: 0;
+  }
   #season__slider {
+    overflow-x: inherit;
     max-width: 216px;
     flex-direction: column;
     max-height: 915px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
   #season__slider .clock {
     padding-left: 10px;
@@ -641,9 +672,6 @@ button {
   }
   .bottom .right p {
     width: 80%;
-  }
-  .new {
-    height: 65vh;
   }
   .new .container h1 {
     padding-top: 60px;
@@ -704,7 +732,7 @@ button {
   }
   form {
     width: 325px;
-}
+  }
   input {
     padding: 10px 5px;
   }
