--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,9 +181,11 @@ main > p {
 }
 .clock__img {
   max-width: 215px;
-  min-height: 250px;
   background-color: #191b1c;
   padding-top: 20px;
+}
+.clock__img img {
+  width: 200px;
 }
 .clock p {
   font-family: "Playfair Display";
@@ -612,6 +614,9 @@ button {
   }
 }
 @media (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
   .contact .left__content div,
   .contact__txt {
     display: none;
@@ -639,16 +644,8 @@ button {
   .top .left {
     width: 100%;
   }
-  #season__slider {
-    overflow-x: inherit;
-    max-width: 216px;
-    flex-direction: column;
-    max-height: 915px;
-    margin-bottom: 50px;
-  }
   #season__slider .clock {
-    padding-left: 10px;
-    margin-right: 15px;
+    margin-right: 10px;
   }
   .top .right {
     width: 100%;
@@ -685,10 +682,13 @@ button {
     flex-direction: row;
     flex-wrap: nowrap;
     overflow: scroll;
+    gap: 10px;
   }
   #new__slider .clock {
-    padding-left: 10px;
-    margin-right: 15px;
+    margin-right: 10px;
+  }
+  #new__slider .clock img {
+    width: 200px;
   }
   .brands__cards {
     flex-direction: column;
